Changes In About Page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
   <body>
       <div class="main-content">
         {{>header}}
+        <p>This site was created by AT Programmer . It Uses Data From Darksky.net and mapbox.com<br>You Can Get Information About Current Weather Of All Area's</p>
           <img  class="portrait" src="./img/1.jpg" alt="">
 
       </div>
